examples/test/testpolicy14327.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14327
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key18: value41
      key29: value38
      key4: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value33
          key44: value27
          key3: value26
      podSelector:
        matchLabels:
          key25: value26
          key39: value17
